--- a/debug_menu.vcxproj
+++ b/debug_menu.vcxproj
@@ -22,89 +22,38 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\actor.cpp" />
     <ClCompile Include="src\ai_player_controller.cpp" />
-    <ClCompile Include="src\alternate_costumes.cpp" />
     <ClCompile Include="src\animation_controller.cpp" />
     <ClCompile Include="src\base_ai_debug.cpp" />
-    <ClCompile Include="src\character_viewer.cpp" />
-    <ClCompile Include="src\concept_art.cpp" />
-    <ClCompile Include="src\concept_art2.cpp" />
-    <ClCompile Include="src\console.cpp" />
-    <ClCompile Include="src\consolevars.cpp" />
-    <ClCompile Include="src\covers.cpp" />
-    <ClCompile Include="src\debugutil.cpp" />
+    <ClCompile Include="src\conglom.cpp" />
     <ClCompile Include="src\debug_menu.cpp" />
     <ClCompile Include="src\debug_menu_extra.cpp" />
-    <ClCompile Include="src\debug_render.cpp" />
-    <ClCompile Include="src\fe_dialog_text.cpp" />
-    <ClCompile Include="src\fe_game_credits.cpp" />
-    <ClCompile Include="src\fe_menu_nav_bar.cpp" />
-    <ClCompile Include="src\fe_mini_map_widget.cpp" />
-    <ClCompile Include="src\frontendmenusystem.cpp" />
     <ClCompile Include="src\game.cpp" />
-    <ClCompile Include="src\game_data_meat.cpp" />
+    <ClCompile Include="src\generic_interface.cpp" />
     <ClCompile Include="src\input_device.cpp" />
     <ClCompile Include="src\input_mgr.cpp" />
     <ClCompile Include="src\keyboard_device.cpp" />
-    <ClCompile Include="src\landmarks.cpp" />
     <ClCompile Include="src\limited_timer.cpp" />
-    <ClCompile Include="src\link_system.cpp" />
-    <ClCompile Include="src\ltd_edition.cpp" />
-    <ClCompile Include="src\main_menu_credits.cpp" />
-    <ClCompile Include="src\main_menu_keyboard.cpp" />
-    <ClCompile Include="src\main_menu_legal.cpp" />
-    <ClCompile Include="src\main_menu_load.cpp" />
-    <ClCompile Include="src\main_menu_memcard_check.cpp" />
-    <ClCompile Include="src\main_menu_start.cpp" />
     <ClCompile Include="src\message_board.cpp" />
-    <ClCompile Include="src\mission_stack_manager.cpp" />
     <ClCompile Include="src\mouselook_controller.cpp" />
-    <ClCompile Include="src\movie_manager.cpp" />
     <ClCompile Include="src\nlPlatformEnum.cpp" />
-    <ClCompile Include="src\osassert.cpp" />
-    <ClCompile Include="src\panelfile.cpp" />
-    <ClCompile Include="src\pausemenusystem.cpp" />
-    <ClCompile Include="src\pause_menu_controller.cpp" />
-    <ClCompile Include="src\pause_menu_credits.cpp" />
-    <ClCompile Include="src\pause_menu_message_log.cpp" />
-    <ClCompile Include="src\pause_menu_options_display.cpp" />
-    <ClCompile Include="src\pause_menu_root.cpp" />
-    <ClCompile Include="src\pause_menu_save_load_display.cpp" />
-    <ClCompile Include="src\pause_menu_status.cpp" />
-    <ClCompile Include="src\pause_menu_transition.cpp" />
-    <ClCompile Include="src\resource_location.cpp" />
     <ClCompile Include="src\rtdt_replay_mgr.cpp" />
-    <ClCompile Include="src\smoke_test.cpp" />
-    <ClCompile Include="src\sound_instance_id.cpp" />
-    <ClCompile Include="src\timer.cpp" />
-    <ClCompile Include="src\tokenizer.cpp" />
-    <ClCompile Include="src\unlockables_menu.cpp" />
     <ClCompile Include="src\us_lighting.cpp" />
+    <ClCompile Include="src\variant_interface.cpp" />
     <ClCompile Include="src\wds.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\usm-debug-menu - Copia - Copia (2)\src\femenusystem.h" />
     <ClInclude Include="src\actor.h" />
     <ClInclude Include="src\ai_player_controller.h" />
-    <ClInclude Include="src\alternate_costumes.h" />
     <ClInclude Include="src\animation_controller.h" />
     <ClInclude Include="src\base_ai_core.h" />
     <ClInclude Include="src\base_ai_debug.h" />
     <ClInclude Include="src\bit.h" />
-    <ClInclude Include="src\character_viewer.h" />
     <ClInclude Include="src\color.h" />
     <ClInclude Include="src\color32.h" />
     <ClInclude Include="src\common.h" />
-    <ClInclude Include="src\concept_art.h" />
-    <ClInclude Include="src\concept_art2.h" />
-    <ClInclude Include="src\console.h" />
-    <ClInclude Include="src\consolevars.h" />
-    <ClInclude Include="src\covers.h" />
-    <ClInclude Include="src\debugutil.h" />
+    <ClInclude Include="src\conglom.h" />
     <ClInclude Include="src\debug_menu.h" />
     <ClInclude Include="src\debug_menu_extra.h" />
-    <ClInclude Include="src\debug_render.h" />
-    <ClInclude Include="src\debug_struct.h" />
-    <ClInclude Include="src\debug_widget.h" />
     <ClInclude Include="src\device_id.h" />
     <ClInclude Include="src\devopt.h" />
     <ClInclude Include="src\entity.h" />
@@ -114,89 +63,57 @@
     <ClInclude Include="src\entity_handle_manager.h" />
     <ClInclude Include="src\entity_tracker_manager.h" />
     <ClInclude Include="src\femanager.h" />
-    <ClInclude Include="src\femultilinetext.h" />
     <ClInclude Include="src\fetext.h" />
-    <ClInclude Include="src\fe_dialog_text.h" />
     <ClInclude Include="src\fe_health_widget.h" />
-    <ClInclude Include="src\fe_menu_nav_bar.h" />
-    <ClInclude Include="src\fe_mini_map_widget.h" />
     <ClInclude Include="src\fixedstring.h" />
     <ClInclude Include="src\fixedstring32.h" />
     <ClInclude Include="src\float.hpp" />
     <ClInclude Include="src\forwards.h" />
-    <ClInclude Include="src\frontendmenusystem.h" />
     <ClInclude Include="src\func_wrapper.h" />
     <ClInclude Include="src\game.h" />
-    <ClInclude Include="src\gamepad.h" />
-    <ClInclude Include="src\game_data_meat.h" />
     <ClInclude Include="src\game_settings.h" />
+    <ClInclude Include="src\generic_interface.h" />
     <ClInclude Include="src\geometry_manager.h" />
     <ClInclude Include="src\hashstring.h" />
     <ClInclude Include="src\igofrontend.h" />
     <ClInclude Include="src\info_node.h" />
+    <ClInclude Include="src\ini_parser.h" />
     <ClInclude Include="src\input.h" />
     <ClInclude Include="src\input_device.h" />
     <ClInclude Include="src\input_mgr.h" />
     <ClInclude Include="src\keyboard.h" />
     <ClInclude Include="src\keyboard_device.h" />
-    <ClInclude Include="src\landmarks.h" />
     <ClInclude Include="src\levelmenu.h" />
     <ClInclude Include="src\limited_timer.h" />
-    <ClInclude Include="src\link_system.h" />
     <ClInclude Include="src\list.hpp" />
-    <ClInclude Include="src\ltd_edition.h" />
-    <ClInclude Include="src\main.h" />
-    <ClInclude Include="src\main_menu_credits.h" />
-    <ClInclude Include="src\main_menu_keyboard.h" />
-    <ClInclude Include="src\main_menu_legal.h" />
-    <ClInclude Include="src\main_menu_load.h" />
-    <ClInclude Include="src\main_menu_memcard_check.h" />
-    <ClInclude Include="src\main_menu_start.h" />
     <ClInclude Include="src\mashable_vector.h" />
-    <ClInclude Include="src\mash_info_struct.h" />
     <ClInclude Include="src\matrix4x4.h" />
     <ClInclude Include="src\memory.h" />
     <ClInclude Include="src\memory_menu.h" />
     <ClInclude Include="src\message_board.h" />
     <ClInclude Include="src\mission_manager.h" />
     <ClInclude Include="src\mission_manager_script_data.h" />
-    <ClInclude Include="src\mission_stack_manager.h" />
     <ClInclude Include="src\mission_table_container.h" />
     <ClInclude Include="src\mouselook_controller.h" />
-    <ClInclude Include="src\movie_manager.h" />
     <ClInclude Include="src\mstring.h" />
     <ClInclude Include="src\mvector.h" />
     <ClInclude Include="src\nal_system.h" />
     <ClInclude Include="src\ngl.h" />
     <ClInclude Include="src\ngl_math.h" />
     <ClInclude Include="src\nlPlatformEnum.h" />
-    <ClInclude Include="src\osassert.h" />
     <ClInclude Include="src\os_developer_options.h" />
     <ClInclude Include="src\os_file.h" />
-    <ClInclude Include="src\panelfile.h" />
-    <ClInclude Include="src\panelquad.h" />
     <ClInclude Include="src\param_block.h" />
-    <ClInclude Include="src\pausemenusystem.h" />
-    <ClInclude Include="src\pause_menu_controller.h" />
-    <ClInclude Include="src\pause_menu_credits.h" />
-    <ClInclude Include="src\pause_menu_message_log.h" />
-    <ClInclude Include="src\pause_menu_options_display.h" />
-    <ClInclude Include="src\pause_menu_root.h" />
-    <ClInclude Include="src\pause_menu_save_load_display.h" />
-    <ClInclude Include="src\pause_menu_status.h" />
-    <ClInclude Include="src\pause_menu_transition.h" />
     <ClInclude Include="src\physical_interface.h" />
     <ClInclude Include="src\po.h" />
     <ClInclude Include="src\region.h" />
     <ClInclude Include="src\region_mash_info.h" />
     <ClInclude Include="src\resource_directory.h" />
     <ClInclude Include="src\resource_key.h" />
-    <ClInclude Include="src\resource_location.h" />
     <ClInclude Include="src\resource_manager.h" />
     <ClInclude Include="src\resource_pack_directory.h" />
     <ClInclude Include="src\resource_pack_location.h" />
     <ClInclude Include="src\resource_pack_slot.h" />
-    <ClInclude Include="src\resource_pack_streamer.h" />
     <ClInclude Include="src\resource_partition.h" />
     <ClInclude Include="src\rtdt_replay_mgr.h" />
     <ClInclude Include="src\script_executable.h" />
@@ -206,21 +123,17 @@
     <ClInclude Include="src\script_object.h" />
     <ClInclude Include="src\signaller.h" />
     <ClInclude Include="src\slab_allocator.h" />
-    <ClInclude Include="src\smoke_test.h" />
-    <ClInclude Include="src\sound_instance_id.h" />
     <ClInclude Include="src\spider_monkey.h" />
     <ClInclude Include="src\string_hash.h" />
     <ClInclude Include="src\terrain.h" />
-    <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\tlresource_location.h" />
     <ClInclude Include="src\tl_system.h" />
-    <ClInclude Include="src\tokenizer.h" />
     <ClInclude Include="src\trace.h" />
-    <ClInclude Include="src\unlockables_menu.h" />
     <ClInclude Include="src\us_lighting.h" />
     <ClInclude Include="src\utility.h" />
     <ClInclude Include="src\variable.h" />
     <ClInclude Include="src\variables.h" />
+    <ClInclude Include="src\variant_interface.h" />
     <ClInclude Include="src\vector2di.h" />
     <ClInclude Include="src\vector3d.h" />
     <ClInclude Include="src\vector4d.h" />
